<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.AddBookFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ScrollView android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:fillViewport="false"
                    android:layout_weight="1">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fullBookTitle"
                    android:textSize="@dimen/head_line"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    android:paddingRight="@dimen/twice_standard_margin"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/standard_margin_val"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fullBookCover"
                    android:contentDescription="@string/book_cover"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/fullBookTitle"
                    android:layout_alignLeft="@+id/fullBookTitle"
                    android:layout_alignStart="@+id/fullBookTitle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fullBookSubTitle"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:textSize="@dimen/full_book_subtitle_txt_size"
                    android:layout_marginLeft="@dimen/twice_standard_margin"
                    android:layout_marginRight="@dimen/standard_margin_val"
                    android:layout_alignTop="@+id/fullBookCover"
                    android:layout_toRightOf="@+id/fullBookCover"
                    android:layout_toEndOf="@+id/fullBookCover"/>


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fullBookDesc"
                    android:ellipsize="end"
                    android:layout_marginLeft="@dimen/standard_margin_val"
                    android:layout_below="@+id/fullBookCover"
                    android:layout_margin="@dimen/standard_margin_val"
                    />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookDesc"
                    android:layout_marginTop="@dimen/standard_margin_val"
                    android:padding="@dimen/standard_margin_val">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categories"
                        android:layout_weight="1"
                        android:gravity="left|top"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/authors"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:gravity="right|top"/>
                </LinearLayout>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back_button"
                    android:id="@+id/backButton"
                    android:onClick="goBack"
                    android:src="@drawable/ic_action_undo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_gravity="right|top"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/fullBookTitle"
                    android:layout_alignEnd="@+id/fullBookTitle"/>


            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/delete_button"
                android:drawableLeft="@drawable/ic_action_discard"
                android:layout_marginRight="@dimen/standard_margin_val"
                android:layout_marginBottom="@dimen/delete_button_bottom_margin"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
